<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This file is part of the Yildiz-Engine project, licenced under the MIT License  (MIT)
  ~
  ~  Copyright (c) 2019 Grégory Van den Borre
  ~
  ~  More infos available: https://engine.yildiz-games.be
  ~
  ~  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
  ~  documentation files (the "Software"), to deal in the Software without restriction, including without
  ~  limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
  ~  of the Software, and to permit persons to whom the Software is furnished to do so,
  ~  subject to the following conditions:
  ~
  ~  The above copyright notice and this permission notice shall be included in all copies or substantial
  ~  portions of the Software.
  ~
  ~  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE
  ~  WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS
  ~  OR COPYRIGHT  HOLDERS BE LIABLE FOR ANY CLAIM,
  ~  DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE  SOFTWARE.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <name>Yildiz Common Compression</name>
  <description>Common Compression library for the yildiz project, contains utilities to compression and decompress files.</description>
  <url>https://bitbucket.org/yildiz-engine-team/common-compression</url>

  <artifactId>common-compression</artifactId>
  <version>2.0.6-SNAPSHOT</version>

  <packaging>jar</packaging>
  <inceptionYear>2017</inceptionYear>

  <scm>
    <connection>scm:git:https://bitbucket.org/yildiz-engine-team/common-compression</connection>
    <developerConnection>scm:git:https://bitbucket.org/yildiz-engine-team/common-compression</developerConnection>
    <url>https://bitbucket.org/yildiz-engine-team/common-compression</url>
  </scm>

  <parent>
    <artifactId>parent</artifactId>
    <groupId>be.yildiz-games</groupId>
    <version>3.0.7</version>
  </parent>

  <properties>
    <java.version>11</java.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
